--- a/Src/Common/Common.csproj
+++ b/Src/Common/Common.csproj
@@ -4,4 +4,7 @@
     <RootNamespace>Northwind.Common</RootNamespace>
     <AssemblyName>Northwind.Common</AssemblyName>
   </PropertyGroup>
+  <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="9.0.0" />
+  </ItemGroup>
 </Project>
