--- a/Src/Persistence/Persistence.csproj
+++ b/Src/Persistence/Persistence.csproj
@@ -29,8 +29,8 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Common\Common.csproj" />
-    <ProjectReference Include="..\Infrastructure.Interfaces\Infrastructure.Interfaces.csproj" />
     <ProjectReference Include="..\Infrastructure\Infrastructure.csproj" />
+    <ProjectReference Include="..\Persistence.Interfaces\Persistence.Interfaces.csproj" />
   </ItemGroup>
 
 </Project>
