--- a/Src/Application/Application.csproj
+++ b/Src/Application/Application.csproj
@@ -17,7 +17,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Common\Utils.csproj" />
-    <ProjectReference Include="..\Domain\Domain.csproj" />
+    <ProjectReference Include="..\Domain\Entities.csproj" />
   </ItemGroup>
 
 </Project>
