--- a/Src/Application/Application.csproj
+++ b/Src/Application/Application.csproj
@@ -18,6 +18,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Common\Utils.csproj" />
     <ProjectReference Include="..\Domain\Entities.csproj" />
+    <ProjectReference Include="..\Infrastructure.Interfaces\Infrastructure.Interfaces.csproj" />
   </ItemGroup>
 
 </Project>
