--- a/Src/Infrastructure/Infrastructure.csproj
+++ b/Src/Infrastructure/Infrastructure.csproj
@@ -13,7 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Application\Application.csproj" />
+    <ProjectReference Include="..\Application\UseCases.csproj" />
     <ProjectReference Include="..\Common\Utils.csproj" />
   </ItemGroup>
 
